--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="wrapper">
       <div class="text-container">
-        <p>This is not a real online service!. You know you need something <br>like this in your life to help you
+        <p>This is not a real online service! You know you need something <br>like this in your life to help you
           realize your deepest dreams. <br>Sign up <em>now</em> to get started. <br><br>You <em>know</em> you want to</p>
       </div>
       <div class="container">
