--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="img">
       <div class="logo">
-        <img src="/image/odin.png" alt="odin">
+        <img src="./image/odin.png" alt="odin">
         <h2>ODIN</h2>
       </div>
       <div class="image-description">
