I made some more corrections

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       <br>
       <br>
-    <div class="login">Already Have an account?<a href="">log in</a></div>
+    <div class="login">Already Have an account?<a href="" class="log-in">login</a></div>
 
     <script src="app.js"></script>
   </body>
